--- a/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/PartsListView.tt
+++ b/src/Coevery.Web/DeveloperTools/CodeGeneration/CodeGenerationTemplates/PartsListView.tt
@@ -1,13 +1,9 @@
 ﻿<#@ template debug="false" hostspecific="true" language="C#" #>
-<#@ assembly name="System.Core" #>
 <#@ assembly name="Newtonsoft.Json" #>
 <#@ include file="ListViewCommon.ttinclude" #>
 <#@ import namespace="Newtonsoft.Json" #>
 <#@ import namespace="Newtonsoft.Json.Linq" #>
-<#@ parameter type="System.String" name="EntityTypeName" #>
-<#@ parameter type="System.String" name="ViewName" #>
-<#@ parameter type="System.String" name="Namespace" #>
-<#@ output extension=".txt" #>
+<#@ parameter type="System.String" name="EntityName" #>
 @using Coevery.Utility.Extensions;
 @{
     Style.Require("jqGrid");
@@ -17,15 +13,15 @@
 }
 
 <div class="row-fluid">
-    <table id="<#=ViewName.ToLower()#>Grid"></table>
-    <section id="<#=ViewName.ToLower()#>GridPager"></section>
+    <table id="<#=EntityName.ToLower()#>Grid"></table>
+    <section id="<#=EntityName.ToLower()#>GridPager"></section>
 </div>
 @Html.AntiForgeryToken()
 
 @using (Script.Foot()) {
     <script type="text/javascript">
 		function updateButtonStatus() {
-            var selectedRowIds = $('#<#=ViewName.ToLower()#>Grid').jqGrid('getGridParam', 'selarrrow');
+            var selectedRowIds = $('#<#=EntityName.ToLower()#>Grid').jqGrid('getGridParam', 'selarrrow');
             $("#btnEdit").toggle(selectedRowIds.length == 1);
             $("#btnDelete").toggle(selectedRowIds.length > 0);
         }
@@ -38,7 +34,7 @@
                 order: 'sortOrder'
             }
         });
-        $('#<#=ViewName.ToLower()#>Grid').jqGrid({
+        $('#<#=EntityName.ToLower()#>Grid').jqGrid({
             url: '@Url.Action("List")',
             datatype: 'json',
 			mtype: 'POST',
@@ -52,7 +48,7 @@
             colModel: <#=GetGridColumnJSONString()#>,
             rowNum: 10,
             rowList: [10, 20, 30],
-            pager: '#<#=ViewName.ToLower()#>GridPager',
+            pager: '#<#=EntityName.ToLower()#>GridPager',
             viewrecords: true,
             height: '100%',
             pagerpos: 'right',
@@ -76,12 +72,12 @@
             }
         });
         $('#btnEdit').click(function() {
-            var selectedRowIds = $('#<#=ViewName.ToLower()#>Grid').jqGrid('getGridParam', 'selarrrow');
+            var selectedRowIds = $('#<#=EntityName.ToLower()#>Grid').jqGrid('getGridParam', 'selarrrow');
             if (selectedRowIds.length == 0) return;
             window.location.href = '@Url.Action("Edit")/' + selectedRowIds[0]+'?returnUrl=@ViewContext.RequestContext.HttpContext.Request.ToUrlString()';
         });
         $('#btnDelete').click(function () {
-            var selectedIds = $('#<#=ViewName.ToLower()#>Grid').jqGrid('getGridParam', 'selarrrow');
+            var selectedIds = $('#<#=EntityName.ToLower()#>Grid').jqGrid('getGridParam', 'selarrrow');
 		    if (selectedIds.length == 0) return;
 		    var magicToken = $("input[name=__RequestVerificationToken]").first();
 		    if (magicToken.length == 0) {
@@ -97,14 +93,14 @@
 		            traditional: true
 		        })
 		        .done(function(response) {
-		            $('#<#=ViewName.ToLower()#>Grid').trigger('reloadGrid');
+		            $('#<#=EntityName.ToLower()#>Grid').trigger('reloadGrid');
 		        })
 		        .fail(function(jqXHR, textStatus, errorThrown) {
 		            alert(textStatus);
 		        });
         });
         $('#btnRefresh').click(function () {
-            $('#<#=ViewName.ToLower()#>Grid').trigger('reloadGrid');
+            $('#<#=EntityName.ToLower()#>Grid').trigger('reloadGrid');
         });
     </script>
 }
@@ -114,17 +110,21 @@
 
     private string GetGridColumnJSONString() {
         var jsonColumns = new JArray();
-        var columns = GetColumns(EntityTypeName);
+        var columns = GetColumns(EntityName);
+		var partDefinition = GetContentPartDefinition(EntityName);
         foreach (var gridColumn in columns) {
-            var column = new JObject();
-            column["name"] = gridColumn.Name;
-			column["index"] = gridColumn.Name;
-            column["label"] = gridColumn.Label;
-            if (gridColumn.Hidden)
-                column["hidden"] = true;
-            if (gridColumn.IsKey)
-                column["key"] = true;
-            jsonColumns.Add(column);
+            var field = partDefinition.Fields.FirstOrDefault(f => f.Name == gridColumn.Name);
+            if (field != null) {
+                var column = new JObject();
+                column["name"] = field.Name;
+                column["index"] = field.Name;
+                column["label"] = field.DisplayName;
+                if (gridColumn.Hidden)
+                    column["hidden"] = true;
+                if (gridColumn.IsKey)
+                    column["key"] = true;
+                jsonColumns.Add(column);
+            }
         }
         return JsonConvert.SerializeObject(jsonColumns);
     }
