--- a/src/Coevery.Web/Themes/Mooncake/Views/Layout.cshtml
+++ b/src/Coevery.Web/Themes/Mooncake/Views/Layout.cshtml
@@ -145,7 +145,7 @@
                                     </a>
                                     <ul class="dropdown-menu pull-right">
                                         <li><a href="#"><i class="icol-user"></i>&nbsp;My Profile</a></li>
-                                        <li><a href="@Href("~/DevTools#/Entities")"><i class="icol-application-key"></i>&nbsp;Admin</a></li>
+                                        <li><a href="@Href("~/DevTools#/Entities")"><i class="icol-application-key"></i>&nbsp;Developer Tools</a></li>
                                         <li class="divider"></li>
                                         <li>
                                             <a href="@Url.Action("LogOff", new {Controller = "Account", Area = "Coevery.Users", ReturnUrl = Context.Request.RawUrl})" rel="nofollow">
